[gd_scene load_steps=35 format=2]

[ext_resource path="res://plugins/basic_manufacturing/drill/ore.tscn" type="PackedScene" id=1]
[ext_resource path="res://core/hud.tscn" type="PackedScene" id=2]
[ext_resource path="res://core/font_big_title.tres" type="DynamicFont" id=3]
[ext_resource path="res://plugins/basic_manufacturing/storage_pod/storage_pod.tscn" type="PackedScene" id=4]
[ext_resource path="res://plugins/tutorial_map/environment.tres" type="Environment" id=5]
[ext_resource path="res://addons/zylann.hterrain/hterrain.gd" type="Script" id=6]
[ext_resource path="res://plugins/basic_manufacturing/spawn_platform/spawn_platform.tscn" type="PackedScene" id=7]
[ext_resource path="res://plugins/basic_manufacturing/drill/drill.tscn" type="PackedScene" id=8]
[ext_resource path="res://core/menu/theme/theme.tres" type="Theme" id=9]
[ext_resource path="res://core/game_master.gd" type="Script" id=10]
[ext_resource path="res://plugins/worker_drone/drone.tscn" type="PackedScene" id=11]
[ext_resource path="res://plugins/basic_manufacturing/storage_pod/storage_pod_ghost.tscn" type="PackedScene" id=12]
[ext_resource path="res://plugins/basic_manufacturing/spawn_platform/spawn_platform_ghost.tscn" type="PackedScene" id=13]
[ext_resource path="res://core/camera/free_camera.gd" type="Script" id=14]
[ext_resource path="res://plugins/tutorial_map/hill_data/data.hterrain" type="Resource" id=15]
[ext_resource path="res://addons/tiles/grass/grass_0.png" type="Texture" id=16]
[ext_resource path="res://plugins/basic_manufacturing/munitions_factory/munitions_factory_ghost.tscn" type="PackedScene" id=17]
[ext_resource path="res://plugins/basic_manufacturing/refinery/refinery_ghost.tscn" type="PackedScene" id=18]
[ext_resource path="res://plugins/tutorial_map/water/water.tres" type="Material" id=19]
[ext_resource path="res://addons/tiles/sand/IMG_8938 Seamless Normal.jpg" type="Texture" id=20]
[ext_resource path="res://addons/tiles/sand/IMG_8938 Seamless.jpg" type="Texture" id=21]
[ext_resource path="res://addons/zylann.hterrain/hterrain_detail_layer.gd" type="Script" id=22]
[ext_resource path="res://addons/map_detail/grass/grass_02/diffus.tga" type="Texture" id=23]
[ext_resource path="res://addons/map_detail/grass/grass.obj" type="ArrayMesh" id=24]
[ext_resource path="res://addons/zylann.hterrain/tools/icons/icon_detail_layer_node.svg" type="Texture" id=25]
[ext_resource path="res://plugins/basic_manufacturing/roboport/roboport_ghost.tscn" type="PackedScene" id=26]
[ext_resource path="res://plugins/tutorial_map/evil_ai.gd" type="Script" id=27]
[ext_resource path="res://plugins/tutorial_map/map.gd" type="Script" id=28]
[ext_resource path="res://plugins/tutorial_map/victory.gd" type="Script" id=29]
[ext_resource path="res://plugins/tutorial_map/ocean_floor_shape.tres" type="Shape" id=30]
[ext_resource path="res://plugins/tutorial_map/ocean_floor_mesh.tres" type="PlaneMesh" id=31]
[ext_resource path="res://plugins/tutorial_map/ocean_floor_material.tres" type="Material" id=32]
[ext_resource path="res://plugins/tutorial_map/water_mesh.tres" type="PlaneMesh" id=33]
[ext_resource path="res://plugins/tutorial_map/evil_ai_trigger_shape.tres" type="Shape" id=34]

[node name="Hill" type="Node"]
script = ExtResource( 10 )
victory_screen = NodePath("Victory")
map_name = "tutorial_hill"

[node name="EvilAI" type="Node" parent="."]
process_priority = 1000
script = ExtResource( 27 )

[node name="Area" type="Area" parent="EvilAI"]
transform = Transform( 0.659251, 0, 0.751923, 0, 1, 0, -0.751923, 0, 0.659251, 719.094, 74.0377, 728.636 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape" type="CollisionShape" parent="EvilAI/Area"]
shape = ExtResource( 34 )

[node name="IdlePoint" type="Spatial" parent="EvilAI"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 790.979, 0.481917, 778.691 )

[node name="Map" type="Node" parent="."]
script = ExtResource( 28 )
drone_scene = ExtResource( 11 )

[node name="HTerrain" type="Spatial" parent="Map"]
script = ExtResource( 6 )
collision_enabled = true
ambient_wind = 0.0
lod_scale = 2.0
custom_globalmap_shader = null
map_scale = Vector3( 1, 1, 1 )
_terrain_data = ExtResource( 15 )
chunk_size = 32
shader_type = "Classic4Lite"
custom_shader = null
shader_params/u_ground_uv_scale = 20
shader_params/u_depth_blending = false
shader_params/u_triplanar = false
shader_params/u_tile_reduction = Plane( 0, 1, 0, 0 )
ground/albedo_bump_0 = ExtResource( 16 )
ground/normal_roughness_0 = null
ground/albedo_bump_1 = ExtResource( 21 )
ground/normal_roughness_1 = ExtResource( 20 )
ground/albedo_bump_2 = null
ground/normal_roughness_2 = null
ground/albedo_bump_3 = null
ground/normal_roughness_3 = null

[node name="HTerrainDetailLayer" type="Spatial" parent="Map/HTerrain"]
script = ExtResource( 22 )
__meta__ = {
"_editor_icon": ExtResource( 25 )
}
layer_index = 0
texture = ExtResource( 23 )
view_distance = 300.0
custom_shader = null
density = 1.3333
instance_mesh = ExtResource( 24 )
shader_params/u_globalmap_tint_bottom = null
shader_params/u_globalmap_tint_top = null
shader_params/u_bottom_ao = null
shader_params/u_instance_scale = Vector3( 0.05, 0.05, 0.05 )

[node name="Water" type="MeshInstance" parent="Map"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 500, -6.37859, 500 )
mesh = ExtResource( 33 )
material/0 = ExtResource( 19 )

[node name="OceanFloor" type="StaticBody" parent="Map"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 500, -10, 500 )

[node name="CollisionShape" type="CollisionShape" parent="Map/OceanFloor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -10, 0 )
shape = ExtResource( 30 )

[node name="MeshInstance" type="MeshInstance" parent="Map/OceanFloor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0 )
mesh = ExtResource( 31 )
material/0 = ExtResource( 32 )

[node name="Player" type="Node" parent="Map"]

[node name="Spawn" parent="Map/Player" instance=ExtResource( 7 )]
transform = Transform( -0.5, 0, -0.866025, 0, 1, 0, 0.866025, 0, -0.5, 128.747, 0.218483, 326.685 )

[node name="Drill" parent="Map/Player" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 207.127, 1.375, 217.938 )

[node name="StoragePod" parent="Map/Player" instance=ExtResource( 4 )]
transform = Transform( 0.892735, 0, -0.450582, 0, 1, 0, 0.450582, 0, 0.892735, 206.357, 1.38873, 290.088 )

[node name="Drone" parent="Map/Player" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 215.335, 4.11692, 356.776 )
ghosts = {
"Munition Factory": ExtResource( 17 ),
"Refinery": ExtResource( 18 ),
"Roboport": ExtResource( 26 ),
"Spawn Platform": ExtResource( 13 ),
"Storage Pod": ExtResource( 12 )
}

[node name="Enemy" type="Node" parent="Map"]

[node name="Spawn" parent="Map/Enemy" instance=ExtResource( 7 )]
transform = Transform( 0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 863.142, 0.077, 850.621 )
team = 1

[node name="StoragePod" parent="Map/Enemy" instance=ExtResource( 4 )]
transform = Transform( 0.841218, 0, 0.540696, 0, 1, 0, -0.540696, 0, 0.841218, 813.285, 1.38872, 863.752 )
team = 1

[node name="StoragePod2" parent="Map/Enemy" instance=ExtResource( 4 )]
transform = Transform( 0.212501, 0, 0.977161, 0, 1, 0, -0.977161, 0, 0.212501, 823.285, 1.38872, 855.752 )
team = 1

[node name="Drone" parent="Map/Enemy" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 810.656, 2.9553, 820.223 )
team = 1
ghosts = {
"Munition Factory": ExtResource( 17 ),
"Refinery": ExtResource( 18 ),
"Roboport": ExtResource( 26 ),
"Spawn Platform": ExtResource( 13 ),
"Storage Pod": ExtResource( 12 )
}

[node name="Ores" type="Node" parent="Map"]

[node name="Ore" parent="Map/Ores" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 207.102, 0.0835114, 217.925 )

[node name="Ore2" parent="Map/Ores" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 244.295, 0.210837, 255.474 )

[node name="Ore3" parent="Map/Ores" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 312.708, 30.1831, 566.548 )

[node name="Ore4" parent="Map/Ores" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 438.814, 30.591, 547.43 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 5 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( -0.838714, -0.15169, 0.523019, 0, 0.960422, 0.278549, -0.544572, 0.233623, -0.805519, 0, 66.5759, 0 )
shadow_enabled = true
directional_shadow_blend_splits = true

[node name="Camera" type="Camera" parent="."]
transform = Transform( -0.792089, 0.157985, -0.589607, 0, 0.965926, 0.258819, 0.610406, 0.205008, -0.765099, 139.997, 28.8481, 167.643 )
far = 2000.0
script = ExtResource( 14 )
speed = 50.0

[node name="HUD" parent="." instance=ExtResource( 2 )]
camera = NodePath("../Camera")

[node name="Victory" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 9 )
color = Color( 0, 0, 0, 0.392157 )
script = ExtResource( 29 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Victory"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "Victory"
align = 1
valign = 1

[node name="Exit" type="Button" parent="Victory"]
anchor_left = 0.42
anchor_top = 0.8
anchor_right = 0.58
anchor_bottom = 0.85
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="EvilAI/Area" to="EvilAI" method="_on_Area_body_entered"]
[connection signal="body_exited" from="EvilAI/Area" to="EvilAI" method="_on_Area_body_exited"]
[connection signal="pressed" from="Victory/Exit" to="Victory" method="_on_Exit_pressed"]
